bookstore/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
  labels:
    name: bookstore
    app: online-bookstore
